# parallelSpmvSyclMulti-Queue

./: CMakeLists.txt  README.md  run  runAll.sh  runTest.sh  todo.txt
src/: CMakeLists.txt
src/include/: floatType.h  parallelSpmvCleanData.h  parallelSpmvData.h  parallelSpmvSycl.h
src/main/: CMakeLists.txt  parallelSpmvSycl.cpp
src/matrixPartition/: CMakeLists.txt  getRowsNnzPerQueue.cpp
src/reader/: CMakeLists.txt  reader.cpp  vectorReader.cpp
src/spmv/: CMakeLists.txt  spmv.cpp
